# django-uwsgi-template

./: .coveragerc  .dockerignore  .env.template  .env.tpl  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  bitbucket-pipelines.yml  cookiecutter.json  manage.py  setup.cfg  tasks.py
deploy/: alpha.yml.template  beta.yml.template  deploy.yaml  deploy.yml  production.yml.template
hooks/: post_gen_project.py
project_name/: asgi.py  settings.py  urls.py  wsgi.py
project_name/settings/: alpha.py  base.py  beta.py  local.py  production.py  testing.py
requirements/: common.ini  dev.ini  local.ini  prod.ini  tests.ini
uwsgiconf/: docker.ini  static.ini
uwsgiconf/local/: docker.ini  standalone.ini.template  standalone.ini.tpl  vassal.ini.template
uwsgiconf/remote/: alpha.ini  beta.ini  global.ini  production.ini
{{cookiecutter.project_slug}}/: .env.tpl  .gitignore  .gitlab-ci.yml  Makefile  bitbucket-pipelines.yml  setup.cfg
{{cookiecutter.project_slug}}/ansible/: alpha.yml.tpl  ansible.cfg  beta.yml.tpl  deploy.yml  production.yml.tpl
{{cookiecutter.project_slug}}/deployment/: alpha.yaml  production.yaml  staging.yaml
{{cookiecutter.project_slug}}/requirements/: dev.ini  local.ini
{{cookiecutter.project_slug}}/uwsgiconf/remote/: alpha.ini  beta.ini  production.ini
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  settings.py  urls.py  wsgi.py
