[flake8]
exclude = .git,
          ./static,
          */static/*,
          */migrations/*,
          ./media,
          ./templates,
          ./uwsgiconf,
max-line-length = 119
max-complexity = 11

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = {{project_name}}
line_length = 119
multi_line_output = 5
not_skip = __init__.py

[metadata]
license-file = LICENSE.md
