[flake8]
ignore = E203,E266,E501,W503
max-line-length = 88
select = B,C,E,F,W,T4,B9
exclude = .git,
          ./static,
          */static/*,
          */migrations/*,
          ./media,
          ./templates,
          ./uwsgiconf,

[isort]
combine_as_imports = True
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = {{project_name}}
known_third_party = django
line_length = 88
multi_line_output = 3
not_skip = __init__.py
use_parentheses = True

[metadata]
license-file = LICENSE.md

[tool:multilint]
paths = manage.py
        {{project_name}}
